--- a/i3/config
+++ b/i3/config
@@ -179,7 +179,7 @@ set $Locker i3lock && sleep 1
 
 bindsym Control+Mod1+l exec --no-startup-id $Locker
 
-set $mode_system logout (l), reboot (r), shutdown (s)
+set $mode_system logout (l), reboot (r), shutdown (p)
 mode "$mode_system" {
     bindsym l exec --no-startup-id i3-msg exit, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
