--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,8 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+set -g status-bg colour235
+set -g status-fg colour255
 
 bind -r h select-pane -L
 bind -r j select-pane -D
