--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,11 @@
 set -ga terminal-overrides ",*256col*:Tc"
 
-set -g status-bg colour236
+set -g status-bg colour235
 set -g status-fg colour255
+
+# unbind C-b
+# set -g prefix C-x
+# bind C-x send-prefix
 
 bind -r h select-pane -L
 bind -r j select-pane -D
@@ -16,3 +20,13 @@ bind -r C-l resize-pane -R
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+set -g status-style 'bg=colour235 fg=colour255'
+set -g status-left ''
+set -g status-right '#[fg=colour255,bg=colour237] #{b:pane_current_path} '
+
+setw -g window-status-current-style 'fg=colour255 bg=colour237 bold'
+setw -g window-status-current-format ' #I#[fg=colour255]:#W '
+
+setw -g window-status-style 'fg=colour255 bg=colour235 bold'
+setw -g window-status-format ' #I#[fg=colour255]:#W '
